[tool.poetry]
name = "glue-mock"
version = "0.1.0"
description = ""
authors = ["vitorhes <vitorhes@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
moto = "^4.2.12"
boto3 = "^1.34.3"
pyparsing = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
